Modificamos el body de la vista para representar un formulario sencillo por el cual ingresaremos el id de una categoria

--- a/NWind.MVCCPLS/Views/Home/Index.cshtml
+++ b/NWind.MVCCPLS/Views/Home/Index.cshtml
@@ -11,7 +11,11 @@
     <title>Index</title>
 </head>
 <body>
-    <div> 
-    </div>
+   @using (Html.BeginForm())
+   { 
+    <div>Id Categoria:</div>
+    <div><input type="text" name="id" /></div>
+    <div><input type="submit" value="Buscar" /></div>
+   }
 </body>
 </html>
