Se arreglo un errror en las etiquetas

--- a/NWind.MVCCPLS/Views/Home/CUD.cshtml
+++ b/NWind.MVCCPLS/Views/Home/CUD.cshtml
@@ -11,7 +11,9 @@
     <title>CUD</title>
 </head>
 <body>
-    <div> 
+    <div>
+        @using (Html.BeginForm())
+        {
         <div>ID: @Html.TextBoxFor(p => p.ProductID) </div>
         <div>Nombre: @Html.TextBoxFor(p => p.ProductName)</div>
         <div>Precio: @Html.TextBoxFor(p => p.UnitPrice)</div>
@@ -20,6 +22,7 @@
         <div><input type="submit" name="CreateBtn" value="Crear" /></div>
         <div><input type="submit" name="UpdateBtn" value="Actualizar" /></div>
         <div><input type="submit" name="DeleteBtn" value="Eliminar" /></div>
+        }
     </div>
 </body>
 </html>
