--- a/NWind.XamarinApp/NWind.XamarinApp/MainPage.xaml
+++ b/NWind.XamarinApp/NWind.XamarinApp/MainPage.xaml
@@ -4,7 +4,9 @@
              xmlns:d="http://xamarin.com/schemas/2014/forms/design"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
              mc:Ignorable="d"
-             x:Class="NWind.XamarinApp.MainPage">
+             x:Class="NWind.XamarinApp.MainPage"
+             xmlns:vm="clr-namespace:NWind.ViewModel;assembly=NWind.ViewModel"
+             >
 
     <StackLayout>
         <!-- Place new controls here -->
