Diseñamos la vista para llenar en un formulario cada propiedad de un producto. Luego podremos visualizar un producto en especifico y por ultimo un producto en detalle

--- a/NWind.XamarinApp/NWind.XamarinApp/MainPage.xaml
+++ b/NWind.XamarinApp/NWind.XamarinApp/MainPage.xaml
@@ -13,10 +13,60 @@
     </ContentPage.BindingContext>
     
     <StackLayout>
-        <!-- Place new controls here -->
-        <Label Text="Welcome to Xamarin.Forms!" 
-           HorizontalOptions="Center"
-           VerticalOptions="CenterAndExpand" />
+        <StackLayout>
+            <StackLayout Orientation="Horizontal">
+                <Label Margin="10">Categoria:</Label>
+                <Entry WidthRequest="50" Text="{Binding CategoryID}"></Entry>
+                <Button Text="Buscar" Margin="10"
+                        Command="{Binding SearchProductosCommand}"></Button>
+                <Button Text="Ver detalle" Margin="10" WidthRequest="100"
+                        Command="{Binding SearchProductosByIDCommand}"/>
+            </StackLayout>
+
+            <ListView ItemsSource="{Binding Path=Productos}"
+                      SelectedItem="{Binding ProductoSelected}">
+                <ListView.ItemTemplate>
+                    <DataTemplate>
+                        <ViewCell>
+                            <ViewCell.View>
+                                <Grid>
+                                    <Grid.ColumnDefinitions>
+                                        <ColumnDefinition Width="1*"/>
+                                        <ColumnDefinition Width="1*"/>
+                                        <ColumnDefinition Width="2*"/>
+                                        <ColumnDefinition Width="5*"/>
+                                    </Grid.ColumnDefinitions>
+
+                                    <Label Grid.Column="0"
+                                           Text="{Binding ProductID}"/>
+                                    <Label Grid.Column="1"
+                                           Text="{Binding ProductName}" />
+                                    <Label Grid.Column="2"
+                                            Text="{Binding CategoryID}" />
+                                    <Label Grid.Column="3"
+                                           Text="{Binding UnitPrice}" />
+                                </Grid>
+                            </ViewCell.View>
+                        </ViewCell>
+                    </DataTemplate>
+                </ListView.ItemTemplate>
+            </ListView>
+        </StackLayout>
+        <StackLayout Margin="30,0,0,0">
+            <Label>Detalle el producto</Label>
+            <StackLayout Orientation="Horizontal">
+                <Label>ID:</Label>
+                <Label Text="{Binding ProductID}"/>
+            </StackLayout>
+            <StackLayout Orientation="Horizontal">
+                <Label>Nombre:</Label>
+                <Label Text="{Binding ProductName}"/>
+            </StackLayout>
+            <StackLayout Orientation="Horizontal">
+                <Label>Precio:</Label>
+                <Label Text="{Binding UnitPrice}"/>
+            </StackLayout>
+        </StackLayout>
     </StackLayout>
 
 </ContentPage>
